appId: com.duckduckgo.mobile.android
name: "ReleaseTest: Can add and remove favorites"
tags:
    - releaseTest
---
- launchApp:
    clearState: true
    stopApp: true

- runFlow: ../shared/onboarding.yaml

- tapOn:
    text: "search or type URL"
- inputText: "https://privacy-test-pages.site"
- tapOn:
    id: "com.google.android.inputmethod.latin:id/key_pos_ime_action"
- assertVisible:
    text: ".*keep browsing.*"
- tapOn:
    text: "got it"
# Add favorite from menu button
- tapOn:
    id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
- assertVisible:
    text: "add favorite"
- tapOn:
    text: "add favorite"
# Remove favorite from menu button
- tapOn:
    id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
- assertVisible:
    text: "remove favorite"
- tapOn:
    text: "remove favorite"
# Re-add favorite from menu button
- tapOn:
    id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
- assertVisible:
    text: "add favorite"
- tapOn:
    text: "add favorite"
# Check favorites from bookmarks screen
- tapOn:
    id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
- assertVisible:
    text: "bookmarks"
- tapOn:
    text: "bookmarks"
- assertNotVisible:
    text: "No bookmarks added yet"
- assertVisible:
    text: "Privacy Test Pages - Home"
