appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "ReleaseTest: Fire button is working"
tags:
    - releaseTest
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          stopApp: true

      - runFlow: ../shared/pre_onboarding.yaml

      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://privacy-test-pages.site"
      - pressKey: Enter
      - assertVisible:
          text: ".*keep.browsing.*"
      - tapOn:
          text: "got it"
      - assertVisible:
            text: ".*browsing activity with the fire button.*"
      - runFlow: ../shared/browser_screen/click_on_fire_button.yaml
      - runFlow: ../shared/browser_screen/dismiss_fire_dialog.yaml
      - assertNotVisible: ".*browsing activity with the Fire Button.*"
      - runFlow: ../shared/browser_screen/click_on_fire_button.yaml
      - runFlow: ../shared/browser_screen/confirm_fire_dialog.yaml
      - assertVisible: "You've got this!.*"