appId: com.duckduckgo.mobile.android
name: "Input Screen Search Mode test"
tags:
  - inputScreenTest
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          stopApp: true
      - runFlow: ../shared/skip_all_onboarding.yaml

      # enable the Input Screen
      - runFlow: ../shared/open_ai_settings_screen.yaml
      - tapOn:
          id: "duckAiInputScreenToggleWithAiImage"
      - action: back
      - action: back

      # verify that autocomplete suggestions are shown when typing in the Input Screen
      - tapOn:
          id: "omnibarTextInput"
      - assertVisible:
          id: "inputModeWidget"
      - inputText: "reddit"
      - assertVisible:
          id: "autoCompleteSuggestionsList"
      - assertVisible:
          text: "reddit.com"
          childOf:
            id: "autoCompleteSuggestionsList"

      # verify that submitting a search query opens SERP
      - tapOn:
          id: "actionSend"
      - assertNotVisible:
          id: "inputModeWidget"
      - assertVisible:
          id: "browserLayout"
      - assertVisible:
          text: "reddit"
          childOf:
            id: "browserLayout"

      # add the page to favorites (for future assertions)
      - runFlow: ../shared/browser_screen/click_on_menu_button.yaml
      - tapOn:
          text: "add bookmark"
      - runFlow: ../shared/browser_screen/click_on_menu_button.yaml
      - tapOn:
          text: "bookmarks"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/trailingIcon"
          index: 0
      - tapOn:
          text: "add to favorites"
      - action: back

      # verify that re-opening the Input Screen from SERP pre-fills the last search query and runs autocomplete immediately
      - tapOn:
          id: "omnibarTextInput"
      - assertVisible:
          id: "inputModeWidget"
      - assertVisible:
          text: "reddit"
      - assertVisible:
          id: "autoCompleteSuggestionsList"
      - assertVisible:
          text: "reddit.com"
          childOf:
            id: "autoCompleteSuggestionsList"

      # verify that clearing the Input Screen text and submitting a URL opens the web page
      - tapOn:
          id: "inputFieldClearText"
      - inputText: "eff.org"
      - tapOn:
          id: "actionSend"
      - assertNotVisible:
          id: "inputModeWidget"
      - assertVisible:
          id: "browserLayout"
      - assertVisible:
          text: "https://www.eff.org/"
          childOf:
            id: "singleOmnibar"

      # verify that favorites are shown when opening the Input Screen from a web page and autocomplete is suppressed
      - tapOn:
          id: "omnibarTextInput"
      - assertNotVisible:
          id: "autoCompleteSuggestionsList"
      - assertVisible:
          text: "reddit at DuckDuckGo"
          childOf:
            id: "focusedFavourites"

      # verify that typing shows autocomplete again
      - inputText: "amazo"
      - assertVisible:
          id: "autoCompleteSuggestionsList"
      - assertVisible:
          text: "amazon.com"

      # verify that tapping on a suggestion opens the web page
      - tapOn:
          text: "amazon.com"
      - assertNotVisible:
          id: "inputModeWidget"
      - assertVisible:
          id: "browserLayout"
      - assertVisible:
          text: "https://www.amazon.com/"
          childOf:
            id: "singleOmnibar"

      # verify that tapping on a favorite opens the web page (SERP in this case)
      - tapOn:
          id: "omnibarTextInput"
      - tapOn:
          id: "quickAccessFavicon"
          childOf:
            id: "focusedFavourites"
      - assertNotVisible:
          id: "inputModeWidget"
      - assertVisible:
          id: "browserLayout"
      - assertVisible:
          text: "reddit"
          childOf:
            id: "singleOmnibar"
      - assertVisible:
          text: "reddit"
          childOf:
            id: "browserLayout"
