appId: com.duckduckgo.mobile.android
tags:
  - permissionsTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                clearState: true
                stopApp: true
                permissions: { all: unset }
            - assertVisible:
                text: ".*Allow DuckDuckGo to send you notifications.*"
            - tapOn: "Allow"

            - runFlow: ../shared/skip_all_onboarding.yaml

            - runFlow: ../shared/browser_screen/click_on_menu_button.yaml
            - tapOn:
                text: "Downloads"
            - assertVisible:
                text: ".*No files downloaded yet.*"
            - assertNotVisible:
                text: ".*Find out when downloads are ready.*"
            - assertNotVisible:
                text: ".*Get a notification when downloads complete.*"
            - assertNotVisible:
                text: ".*Notify Me.*"
