appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Onboarding: Ensuring we can navigate through pre-onboarding flow and dismissing all dialogs"
tags:
  - onboardingTest
---
# Pre-requisite: None

- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
      - runFlow: ../shared/pre_onboarding.yaml
      - tapOn:
          id: "daxDialogDismissButton|contextualBrandDesignDismissButton"
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://www.search-company.site/#ad-id-14"
      - pressKey: Enter
      - assertVisible:
          text: ".*As you tap and scroll, I'll block pesky trackers..*"
      - assertVisible:
          id: "daxDialogDismissButton|contextualBrandDesignDismissButton"
      - tapOn:
          id: "daxDialogDismissButton|contextualBrandDesignDismissButton"
      - assertNotVisible:
          text: ".*As you tap and scroll, I'll block pesky trackers..*"
      - assertVisible:
          id: "ad-id-14"
      - tapOn:
          id: "ad-id-14"
      - assertVisible:
          text: ".*was trying to track you here. I blocked them!.*"
      - assertVisible:
          id: "daxDialogDismissButton|contextualBrandDesignDismissButton"
      - tapOn:
          id: "daxDialogDismissButton|contextualBrandDesignDismissButton"
      - assertNotVisible:
          text: ".*was trying to track you here. I blocked them!.*"
      - assertVisible:
          text: "Publisher site"
      - tapOn:
          text: "Publisher site"
      - assertVisible:
          text: ".*Remember: every time you browse with me a creepy ad loses its.wings..*"
      - assertVisible:
          id: "daxDialogDismissButton|contextualBrandDesignDismissButton"
      - tapOn:
          id: "daxDialogDismissButton|contextualBrandDesignDismissButton"
      - assertNotVisible:
          text: ".*Remember: every time you browse with me a creepy ad loses its.wings..*"
      - runFlow: ../shared/browser_screen/click_on_tabs_button.yaml
      - tapOn: "New Tab"
      - assertVisible:
          id: "newTabPage"
