appId: com.duckduckgo.mobile.android
name: "Onboarding: Ensuring we can navigate through pre-onboarding flow and dismissing the fire dialog"
tags:
  - onboardingTest
---
# Pre-requisite: None

- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
      - runFlow: ../shared/pre_onboarding.yaml
      - tapOn:
          id: "contextualBrandDesignDismissButton"
      - assertNotVisible:
          text: ".*That's DuckDuckGo Search!.*"
      - assertVisible:
          id: "omnibarTextInput|inputField"
